<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Lenovo Launcher</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name">"Unnamed Folder"</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="wallpaper_instructions">Wallpaper</string>
    <string name="pick_wallpaper">Static Wallpaper</string>
    <string name="activity_not_found">Application is not installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="apptask_tab_label">Recent</string>
    <string name="apprunning_tab_label">running</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget</string>
    <string name="market">Shop</string>
    <string name="external_drop_widget_error">Could not drop item onto this homescreen</string>
    <string name="external_drop_widget_pick_title">Select widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Applications</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="thd_widgets">3D Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_application">Select application</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Applications</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_apps">Apps</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_theme_settings">Theme</string>
    <string name="menu_sense_settings">Desktop backup and recovery</string>
    <string name="menu_desktop_settings">Preferences</string>
    <string name="menu_screen_setting">Preview</string>
    <string name="menu_help">Help</string>
    <string name="cab_menu_delete_app">Uninstall application</string>
    <string name="cab_menu_app_info">Application details</string>
    <string name="cab_app_selection_text">1 application selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system application and cannot be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="workspace_cling_title">Make yourself at home</string>
    <string name="workspace_cling_move_item">You can put your favorite apps here.</string>
    <string name="workspace_cling_open_all_apps">To see all your apps, touch the circle.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your home screen, touch &amp; hold it.</string>
    <string name="folder_cling_title">Organize your apps with folders</string>
    <string name="folder_cling_move_item">To move an app, touch &amp; hold it.</string>
    <string name="folder_cling_create_folder">To make a new folder on your home screen, stack one app on top of another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="cling_dismiss_new">Confirm</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="workspace_slide_settings_title">Desktop page-turning animation</string>
    <string name="workspave_slide_settings_summary">"You can set slide effect of launcher's workspace."</string>
    <string name="theme_settings_title">My Theme</string>
    <string name="theme_settings_default_theme">Classic</string>
    <string name="add_folder">Folders</string>
    <string name="about_lenovo_desktop_settings">About Lenovo Launcher</string>
    <string name="about_desktop_version">About version</string>
    <string name="lenovo_desktop_verion_title">Current Version</string>
    <string name="lenovo_desktop_verion_summary">Lenovo Launcher Version </string>
    <string name="lenovo_desktop_release_time_title">Release time</string>
    <string name="lenovo_desktop_release_time_summary">2012.03.15</string>
    <string name="lenovo_desktop_qq_title">Lenovo Launcher QQ Group</string>
    <string name="lenovo_desktop_qq_summary">112119507</string>
    <string name="lenovo_desktop_website_title">Official website</string>
    <string name="lenovo_desktop_website_summary">http://launcher.lenovo.com</string>
    <string name="contact_us">Contact us</string>
    <string name="user_data_acquisition_title">User experience improvement plan</string>
    <string name="user_data_acquisition_summary">Assist the user experience of ascension</string>
    <string name="btn_agree">Agree</string>
    <string name="push_text11">User experience improvement plan</string>
    <string name="icon_style_settings_title">Desktop folder style</string>
    <string name="icon_style_settings_default">Default style</string>
    <string name="hotseat_settings_title">Desktop page number style</string>
    <string name="hotseat_settings_default">Default style</string>
    <string name="workspace_loop_settings_title">Desktop cycle display</string>
    <string name="workspace_loop_on">Enabled</string>
    <string name="applist_enter_effect_title">Applist enter effect animation</string>
    <string name="applist_enter_default_effect">Center amplification</string>
    <string name="applist_slide_effect_title">Application list flip animation</string>
    <string name="applist_slide_default_effect">Horizontal flip</string>
    <string name="header_lockscreen_lenovo_title">Enable Lenovo Lockscreen program</string>
    <string name="lockscreen_style_title">Lockscreen program</string>
    <string name="applist">AppList</string>
    <string name="desktop">Desktop</string>
    <string name="checkbox_open">Enabled</string>
    <string name="normal_settings">Normal settings</string>
    <string name="settings_feedback_title">Feedback</string>
    <string name="wallpaper_slide_settings_title">Wallpaper slide</string>
    <string name="settings_pref_wallpaper_desktop">Desktop wallpaper</string>
    <string name="lockpaper_settings_default">Use lenovo lock screen wallpaper</string>
    <string name="setting_weather_city">Setting the weather city</string>
    <string name="select_lenovo_lockscreen">Select lockscreen style</string>
    <string name="auto_workspace_cleanup_title">"Enable desktop cleanup"</string>
    <string name="pref_workspace_cleanup_timeout_default">"Unused for more than 7 Days"</string>
    <string name="pref_workspace_cleanup_timeout_title">"Cleanup conditions"</string>
    <string name="pref_workspace_cleanup_timing_default">"7 Days"</string>
    <string name="pref_workspace_cleanup_timing_title">"Desktop shortcut cleanup frequency"</string>
    <string name="pref_lenovo_force_lock_on_title">Compulsion start lock screen</string>
    <string name="pref_lenovo_force_lock_on_summary">If you use the lenovo mobile phone, and the screen lock is not yet effective, please turn this option</string>
    <string name="pref_clear_two_lockscreen_title">Clear double lock screen</string>
    <string name="pref_clear_two_lockscreen_summary">When the original lock screen and Le lock screen at the same time using</string>
    <string name="menu_update">Version Update</string>
    <string name="applist_loop_settings_title">Applist cycle display</string>
    <string name="weather_animation_toggle">Weather animation switch</string>
    <string name="weather_animation_toggle_ex">display a weather animation</string>
    <string name="about_lenovo_desktop_settings_title">About</string>
    <string name="hotseat_dial_title">Dial</string>
    <string name="hotseat_sms_title">Messaging</string>
    <string name="hotseat_contacts_title">Contacts</string>
    <string name="hotseat_browser_title">Browser</string>
<string name="more_settings_title">More settings</string>
    <string name="auto_workspace_classification_title">"Apps automatically classify"</string>
    <string name="auto_workspace_classification_summary">"The newly installed application automatically categorized into folders"</string>
    <string name="pref_workspace_classification">"Category Apps"</string>
    <string name="pref_workspace_classification_summary">"Applications immediately organized to Category folder"</string>
    <string name="workspace_classifyapps_title">"Category Apps"</string>
    <string name="local_restore">Local restore</string>
    <string name="local_backup">Local backup</string>
    <string name="cloud_restore">Recovery from the cloud</string>
    <string name="cloud_backup">Backup to the cloud</string>
	<string name="tab_cloud">Cloud</string>
</resources>