<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    android:key="pref_profile_screen">


     <PreferenceCategory android:title="@string/tab_local" 
        android:key="pref_backup_settings"
        
        />
    <!-- android:layout="@layout/sec_pref_category" -->
    
    <Preference
	        android:key="pref_local_backup"
	        android:layout="@layout/custom_preference"
	        android:title="@string/local_backup" />
	<Preference
	        android:key="pref_local_restore"
	        android:layout="@layout/custom_preference"
	        android:title="@string/local_restore" />
     <PreferenceCategory android:title="@string/tab_cloud" 
        android:key="pref_restore_settings"
        />
     <!--     android:layout="@layout/sec_pref_category"
     -->
        <Preference
	        android:key="pref_cloud_backup"
	        android:layout="@layout/custom_preference"
	        android:title="@string/cloud_backup" /> 
    
	    <Preference
	        android:key="pref_cloud_restore"
	        android:layout="@layout/custom_preference"
	        android:title="@string/cloud_restore" />
</PreferenceScreen>
