<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:key="pref_key_effect_desktop_settings" android:title="@string/desktop"/>
<!--
    <ListPreference
        android:defaultValue="@string/prefDefault_workspaceSlide"
        android:entries="@array/pref_slide_effect_choices"
        android:entryValues="@array/pref_slide_effect_values"
        android:key="pref_workspace_slide_effect"
        android:summary="@string/workspave_slide_settings_summary"
        android:title="@string/workspace_slide_settings_title" />
-->

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_workspace_loop"
        android:summary="@string/workspace_loop_on"
        android:title="@string/workspace_loop_settings_title" />

    <PreferenceCategory android:key="pref_key_effect_applist_settings" android:title="@string/applist"/>
    <ListPreference
        android:defaultValue="@string/prefDefault_applist"
        android:entries="@array/pref_applist_effect_choices"
        android:entryValues="@array/pref_applist_effect_values"
        android:key="pref_applist_enter_effect"
        android:summary="@string/applist_enter_default_effect"
        android:title="@string/applist_enter_effect_title" />

<!--
    <ListPreference
        android:defaultValue="@string/prefDefault_workspaceSlide"
        android:entries="@array/pref_slide_effect_choices"
        android:entryValues="@array/pref_slide_effect_values"
        android:key="pref_applist_slide_effect"
        android:summary="@string/applist_slide_default_effect"
        android:title="@string/applist_slide_effect_title" />
-->

</PreferenceScreen>
