<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    android:key="pref_workspace_cleanup_screen">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_auto_workspace_cleanup"        
        android:title="@string/auto_workspace_cleanup_title" 
        android:layout="@layout/custom_preference"
        android:widgetLayout="@layout/sec_pref_widget_checkbox"/>
    <!-- android:summary="@string/auto_workspace_cleanup_summary" -->
    <com.lenovo.launcher2.commonui.LeListPreference
        android:defaultValue="@string/prefDefault_Timing"
        android:entries="@array/pref_workspace_cleanup_timing_entries"
        android:entryValues="@array/pref_workspace_cleanup_timing_values"
        android:key="pref_workspace_cleanup_timing"
        android:summary="@string/pref_workspace_cleanup_timing_default"
        android:title="@string/pref_workspace_cleanup_timing_title"
        android:layout="@layout/custom_preference"
        android:widgetLayout="@layout/sec_pref_widget_more" />    
    
    <!--ListPreference
        android:defaultValue="@string/prefDefault_Method"
        android:entries="@array/pref_workspace_cleanup_method_entries"
        android:entryValues="@array/pref_workspace_cleanup_method_values"
        android:key="pref_workspace_cleanup_method"
        android:summary="@string/pref_workspace_cleanup_method_default"
        android:title="@string/pref_workspace_cleanup_method_title"
        android:layout="@layout/custom_preference"
        android:widgetLayout="@layout/sec_pref_widget_more" /<cancel by xingqx>-->
    
    <com.lenovo.launcher2.commonui.LeListPreference
        android:defaultValue="@string/prefDefault_Timeout"
        android:entries="@array/pref_workspace_cleanup_timeout_entries"
        android:entryValues="@array/pref_workspace_cleanup_timeout_values"
        android:key="pref_workspace_cleanup_timeout"
        android:summary="@string/pref_workspace_cleanup_timeout_default"
        android:title="@string/pref_workspace_cleanup_timeout_title" 
        android:layout="@layout/custom_preference"
        android:widgetLayout="@layout/sec_pref_widget_more"/>
                 
   <!--  <Preference
        android:key="pref_workspace_cleanup_now"
        android:title="@string/pref_workspace_cleanup_now"
        android:layout="@layout/custom_preference">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.lenovo.launcher2.WorkspaceCleanupActivity"
            android:targetPackage="com.lenovo.launcher" />
    </Preference> -->
    
    
    
     <Preference
        android:key="pref_workspace_classification"
        android:title="@string/pref_workspace_classification"
        android:layout="@layout/custom_preference">
    </Preference>
    
</PreferenceScreen>
